Refactored `UserController`, `UserService`, and `UserDAO` to introduce enhanced user filtering and pagination logic. Added detailed user data population support with profiles, client, and managing client information. Simplified and improved password and pin update handling in `UserDAO`.